<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Vue.CreateVehicule">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleAddVehicule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/AddVehicule"
            android:textAlignment="center"
            android:textSize="30dp" />
        <TextView
            android:id="@+id/nomVehicule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/AddNomVehicule"
            android:textAlignment="center"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/inputNomVehicule"
            android:hint="Nom du véhicule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/typeVehicule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/selectionTypeVehicule"
            android:textAlignment="center"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinnerTypeVehicule"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="71dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />

        <TextView
            android:id="@+id/premierKmageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/premirKmage"
            android:textAlignment="center"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/inputPremierKmage"
            android:hint="@string/premierKmageHint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:inputType="number"/>

        <Button
            android:id="@+id/buttonAddVehicule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:onClick="addVehicule"/>



    </LinearLayout>


</ScrollView>
